# Endless-VRChat-avatars

./: .gitignore  .taurignore  README.md  TODO.md  build.bat  main.py  main.spec  package-lock.json  package.json  req.txt  schemas.py  utils.py  vite.config.ts
database/: connection.py  models.py  queries.py
frontend/: global.d.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/assets/: CloseFrame.tsx  MaximizeFrame.tsx  MinimizeFrame.tsx
frontend/src/components/: Endless.tsx  Login.tsx  Main.tsx  Official.tsx  Preloader.tsx  Saved.tsx  Search.tsx  Sidebar.tsx  WindowFrame.tsx
frontend/src/styles/: app.module.css  main.module.css  official.module.css  preloader.module.css  sidebar.module.css  windowFrame.module.css
frontend/src/utils/: encoder.ts
services/: __init__.py  auth.py  avatars.py  base_client.py  navigation.py
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs
src-tauri/src/commands/: auth.rs  avatar.rs  cookie_headers.rs  mod.rs
src/components/: index.ts
src/components/AvatarPanel/: AvatarPanel.tsx  styles.css
src/components/CustomCatalog/: CustomCatalog.tsx  styles.css
src/components/IngameCatalog/: IngameCatalog.tsx  styles.css
src/components/Login/: Login.tsx  styles.css
src/components/Main/: Main.tsx  styles.css
src/components/Preloader/: Preloader.tsx  main.module.scss
src/redux/: index.ts  rootReducer.ts
src/redux/slices/: authSlice.ts  (+2 more)
src/utils/: encoder.ts
(+7 files in other folders)
